# tensor-equiv

./: .gitignore  README.md  equiv.py  gadgetisation.py  pyproject.toml  scratch.py
.github/workflows/: pytest_and_ruff.yml
src/tensor_equiv/: __init__.py  builders.py  checkers.py  equiv_ckeck.py  main.py  preprocess.py
tests/: test.py  test_builders.py  test_circ_builders.py  tests.py
